[package]
name = "mock-gl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Crate for mocking an OpenGL context"
readme = "README.md"

[dependencies]
backtrace = "^0.3"
enum-map = "^2.4"
gl = "^0.14" 
log = "^0.4"
paste = "^1.0"
thiserror = "^1.0"

[dev-dependencies]
env_logger = "^0.9"
